# nyc-executive-orders

./: .gitattributes  .gitignore  README.md  gpp_integration_report.md  pyproject.toml  supersession_report.md
.github/workflows/: tests.yml
corpus/: gpp_provenance.json  supersession.json
corpus/1974/: 1974-EO-001.md  1974-EO-002.md  1974-EO-003.md  1974-EO-004.md  1974-EO-005.md  1974-EO-006.md  1974-EO-007.md  1974-EO-008.md  1974-EO-009.md  1974-EO-010.md  1974-EO-011.md  1974-EO-012.md  1974-EO-013.md  1974-EO-014.md  1974-EO-015.md  1974-EO-016.md  1974-EO-017.md  1974-EO-018.md  1974-EO-019.md  1974-EO-020.md  1974-EO-021.md  1974-EO-022.md  1974-EO-023.md  1974-EO-024.md  1974-EO-025.md
corpus/1975/: 1975-EO-026.md  1975-EO-027.md  1975-EO-028.md  1975-EO-029.md  1975-EO-030.md  1975-EO-031.md  1975-EO-032.md  1975-EO-033.md  1975-EO-034.md  1975-EO-035.md  1975-EO-036.md  1975-EO-037.md  1975-EO-038.md  (+10 more)
sample_clean_report/: 1974-EO-001.md  1974-EO-002.md  1974-EO-003.md  1974-EO-004.md  1974-EO-005.md  1974-EO-006.md  1974-EO-007.md  1974-EO-008.md  1974-EO-009.md  1974-EO-010.md  1974-EO-013.md  1974-EO-014.md  1974-EO-018.md  1974-EO-025.md  1975-EO-039.md  1975-EO-046.md  1975-EO-047.md  1976-EO-052.md  1976-EO-060.md  1976-EO-061.md  1976-EO-064.md  1977-EO-091.md  1977-EO-093.md  1978-EO-006.md  1978-EO-010.md  1978-EO-017.md  1979-EO-040.md  1980-EO-043.md  1980-EO-049.md  1986-EO-097.md  1986-EO-101.md  1987-EO-109.md  1987-EO-110.md  1994-EO-002.md  1994-EO-014.md  1995-EO-018.md  1996-EO-027.md  1996-EO-033.md  1998-EO-043.md  1998-EO-044.md  (+20 more)
scripts/: build_wordlist.py  rebuild_index_from_corpus.py  run_clean_sweep.py  run_deblasio_harvest_live.py  run_gap_recovery_live.py  run_gpp_integration.py  run_harvest_live.py  run_parse.py  run_pipeline.py  run_sample_clean.py  run_supersede.py  run_wayback_harvest_live.py
tests/: conftest.py  test_build_corpus.py  test_build_corpus_shrink_guard.py  test_clean.py  test_cli.py  test_deblasio_backfill.py  test_dedupe.py  test_download.py  test_enrich.py  test_enumerate.py  test_extract.py  test_gather_wayback_eo.py  test_gpp.py  test_harvest.py  test_identity.py  test_index.py  test_lexicon.py  test_manifest.py  test_network_guard.py  test_ocr.py  test_pipeline.py  test_recover_gaps.py  test_resolve_pdf.py  test_run_gap_recovery_live.py  test_run_gpp_integration.py  test_run_harvest_live.py  test_run_parse.py  test_run_wayback_harvest_live.py  test_supersede.py  test_textlayer.py
(+2279 files in other folders)
